Finding out user`s Sex..Strange commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegistrationActivity" />
-        <activity android:name=".AddingPhotosActivity"></activity>
+        <activity android:name=".AddingPhotosActivity" />
+        <activity android:name=".ChooseSex"></activity>
     </application>
 
 </manifest>
