--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dx.queen.myreeltest">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,17 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="login.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".AddingPhotosActivity" />
-        <activity android:name=".ChooseSex" />
-        <activity android:name=".AboutUser"></activity>
+        <activity android:name="regisrtation.RegistrationActivity" />
+        <activity android:name="regisrtation.AddingPhotosActivity" />
+        <activity android:name="regisrtation.ChooseSex" />
+        <activity android:name="regisrtation.AboutUser" />
+        <activity android:name="menu.Menu" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
