--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
